--- a/app/views/addingvalue/index.html
+++ b/app/views/addingvalue/index.html
@@ -33,11 +33,17 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
                             <p class='govuk-list app-list--definition'>
-                              <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state"><strong>Version 3 (current)</a></strong><br>
-                              <p class='govuk-list app-list--definition'>This is the version after the third round of iterations, testing with users between 18 and 19 November 2021.<br>  <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Includes issues 32 to 42 from Confluence</a>.<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 17 November 2021<br/>
+                              <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state"><strong>Version 4 (current)</a></strong><br>
+                              This version was not tested yet and <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">includes issues 48 to 52 from Confluence</a>.<br>
+                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 14 March 2022<br/>
                                 </span></p>
+
                                 <p class='govuk-heading-m'>Previous versions</p>
+                                <p class='govuk-list app-list--definition'>
+                                  <a href='addingvalue/v3/guidance' class="govuk-link--no-visited-state"><strong>Version 3</a></strong><br>
+                                  This is the version after the third round of iterations, testing with users between 18 and 19 November 2021.<br>  <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Includes issues 32 to 47 from Confluence</a>.<br>
+                                    <span class="govuk-body govuk-!-font-size-14"># Last updated on 17 November 2021<br/>
+                                    </span></p>
                                 <p class='govuk-list app-list--definition'>
                                   <a href='/addingvalue/v2/guidance' class="govuk-link--no-visited-state"><strong>Version 2</a></strong><br>
                                     This is the version after the second round of iterations, which was tested with users between 4 and 17 November 2021.<br> <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Includes issues 19 to 31 from Confluence</a>.</p>
@@ -50,7 +56,7 @@
             <p class='govuk-heading-m'>Workflows, screenflows and user journeys</p>
               <p class='govuk-list app-list--definition'>
                 <a href='https://app.mural.co/t/dcx6016/m/dcx6016/1636713680677/7d753a3b82b4bc4b277c440db49969a851b078cf?sender=uac8e5181797d9857544e5168' target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
-                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural (last updated on 15 November 2021).<br></p>
+                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural (last updated on 25 November 2021).<br></p>
 
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
