--- a/app/views/addingvalue/v3/environmental-impact.html
+++ b/app/views/addingvalue/v3/environmental-impact.html
@@ -33,7 +33,7 @@ How will the project improve the environment?
                       }
                   },
                   hint: {
-                  text: "Select all that apply"
+                  text: "Select up to 2 options"
                   },
 
                   items: [
