--- a/app/views/addingvalue/current/future-customers.html
+++ b/app/views/addingvalue/current/future-customers.html
@@ -33,7 +33,7 @@ Who will your customers be after the project?
                       }
                   },
                   hint: {
-                  html: "For example, you will now sell directly to retailers.<br><br>Select all that apply"
+                  html: "For example, you will now sell directly to retailers<br><br>Select all that apply"
                   },
 
                   items: [
