--- a/app/views/addingvalue/current/business-type-fail.html
+++ b/app/views/addingvalue/current/business-type-fail.html
@@ -28,9 +28,8 @@
 
       <p class="govuk-body">This grant is for businesses who: </p>
       <ul class="govuk-list govuk-list--bullet">
-      <li>are agricultural, horticultural or forestry producers (primary producers)</li>
-      <li>provide processing services to a primary producer</li>
-      <li>are a separate processing business owned by a primary producer</li>
+        <li>are agricultural or horticultural growers or producers</li>
+        <li>are a separate processing business 100 % owned by growers or producers of agricultural or horticultural produce</li>
       </ul>
 
       <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
