--- a/app/views/addingvalue/current/business-type.html
+++ b/app/views/addingvalue/current/business-type.html
@@ -37,24 +37,16 @@ What is your business?
                   items: [
                 {
                   value: "Agricultural)",
-                  text: "A grower or producer of agricultural, horticultural or forestry agri-products (a primary producer)",
+                  text: "A grower or producer of agricultural or horticultural produce",
                   hint: {
-                  text: "For example, arable or livestock farmer, growing trees, fruit producer, salad grower"
+                  text: "For example, arable or livestock farmer, fruit producer, salad grower"
                   },
                   checked: checked("b-type", "Agricultural")
                 },
 
                 {
-                  value: "Processing services",
-                  text: "Providing processing services to a primary producer",
-                  hint: {
-                  text: "For example, vegetable washing, mobile livestock slaughter services"
-                  },
-                  checked: checked("b-type", "Processing services")
-                },
-                {
                   value: "100% business owned",
-                  text: "A separate processing business owned by a primary producer",
+                  text: "A separate processing business 100% owned by growers or producers of agricultural or horticultural produce",
                   hint: {
                   text: "For example, cheese processing business owned by a dairy farmer"
                   },
@@ -84,9 +76,8 @@ What is your business?
           </h2>
           <p class="govuk-body">This grant is for businesses who: </p>
           <ul class="govuk-list govuk-list--bullet">
-          <li>are agricultural, horticultural or forestry producers (primary producers)</li>
-          <li>provide processing services to a primary producer</li>
-          <li>are a separate processing business owned by a primary producer</li>
+          <li>are agricultural or horticultural growers or producers</li>
+          <li>are a separate business 100% owned by growers or producers of agricultural or horticultural produce</li>
           </ul>
 
 
