--- a/app/views/addingvalue/current/products-processed.html
+++ b/app/views/addingvalue/current/products-processed.html
@@ -27,7 +27,7 @@ What type of products are being processed?
                   name: 'products-processed',
                   fieldset: {
                       legend: {
-                          text: 'What type of products are being processed?',
+                          text: 'What type of produce is being processed?',
                           isPageHeading: true,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -42,7 +42,7 @@ What type of products are being processed?
                   items: [
                 {
                   value: "Arable crops",
-                  text: "Arable products",
+                  text: "Arable produce",
                   hint: {
                   text: "For example, crushing of oilseeds, rolling or flaking of grains as food ingredients"
                   },
@@ -51,7 +51,7 @@ What type of products are being processed?
 
                 {
                   value: "Horticultural crops",
-                  text: "Horticultural products",
+                  text: "Horticultural produce",
                   hint: {
                   text: "For example, grading and packing of soft fruit, washing and packing vegetables, packing salad crops"
                   },
@@ -59,23 +59,15 @@ What type of products are being processed?
                 },
                 {
                   value: "Dairy or meat produce",
-                  text: "Dairy or meat products",
+                  text: "Dairy or meat produce",
                   hint: {
                   text: "For example, processing and bottling milk or slaughtering, cutting, processing and packing meat"
                   },
                   checked: checked("products-processed", "Dairy or meat produce")
                 },
                 {
-                  value: "Forestry products",
-                  text: "Forestry products",
-                  hint: {
-                  text: "For example, wood from harvested trees before industrial processing"
-                  },
-                  checked: checked("products-processed", "Forestry products")
-                },
-                {
                   value: "Fodder crops",
-                  text: "Fodder products",
+                  text: "Fodder produce",
                   hint: {
                   text: "For example, processing and repacking hay and straw for specialist markets or retail sale"
                   },
@@ -83,7 +75,7 @@ What type of products are being processed?
                 },
                 {
                   value: "Non-edible crops",
-                  text: "Non-edible products",
+                  text: "Non-edible produce",
                   hint: {
                   text: "For example, processing and packing ornamental flowers and bulbs after harvesting"
                   },
@@ -91,7 +83,7 @@ What type of products are being processed?
                 },
                 {
                   value: "Fibre products",
-                  text: "Fibre products",
+                  text: "Fibre produce",
                   hint: {
                   text: "For example, processing animal hides and leather, processing fibres such as flax and hemp"
                   },
