--- a/app/views/addingvalue/current/project-items.html
+++ b/app/views/addingvalue/current/project-items.html
@@ -44,7 +44,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" type="checkbox" value="Constructing or improving buildings" {{ checked("robotic-equipment", "Constructing or improving buildings") }}>
         <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
-          Constructing or improving buildings
+          Constructing or improving buildings for processing
         </label>
         <div id="Constructing-or-improving-buildings-hint" class="govuk-hint govuk-radios__hint">
               For example, a new building for cheese making, extending an existing building to install a new meat-cutting and packing line
@@ -60,27 +60,6 @@
               For example, equipment and machinery for pasteurising and bottling milk, a meat cutting and packing line or vegetable washing and packing
             </div>
         </div>
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Controlled atmosphere (CA) and dynamic controlled atmosphere" {{ checked("robotic-equipment", "Controlled atmosphere (CA) and dynamic controlled atmosphere") }}>
-        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
-          Controlled atmosphere (CA) or dynamic controlled atmosphere (DCA) storage
-        </label>
-        <div id="Controlled-atmosphere-storage-hint" class="govuk-hint govuk-radios__hint">
-              For example, CA storage of apples or DCA storage for top fruit
-            </div>
-      </div>
-
-
-
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Specialist vehicles" {{ checked("robotic-equipment", "Specialist vehicles") }}>
-          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
-            Specialist vehicles
-          </label>
-          <div id="Specialist-vehicles-hint" class="govuk-hint govuk-radios__hint">
-                For example, forklift trucks, refrigerated vans or lorries
-              </div>
-        </div>
 
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Retail facilities " {{ checked("robotic-equipment", "Retail facilities ") }}>
@@ -88,7 +67,7 @@
               Retail facilities
             </label>
             <div id="Retail-facilities-hint" class="govuk-hint govuk-radios__hint">
-                  For example, farm shops
+                  For example, shops or display cabinets
                 </div>
           </div>
 </div>
