--- a/app/views/addingvalue/current/project-cost.html
+++ b/app/views/addingvalue/current/project-cost.html
@@ -33,8 +33,7 @@
         <div class="govuk-form-group">
           <h1 class="govuk-heading-l">What is the total estimated cost of the items?</h1>
           <div class="govuk-hint">
-            You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £35,000 (40% of £87,500). The maximum grant is £500,000. <br/><br/>
-            Do not include VAT.
+            You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £25,000 (40% of £62,500). The maximum grant is £300,000.
           </div>
 
           <span class="govuk-caption-m">Enter amount, for example 95,000</span>
