Full submit of issues 48 to 75

--- a/app/views/addingvalue/current/adding-value.html
+++ b/app/views/addingvalue/current/adding-value.html
@@ -30,7 +30,7 @@ How will you add value to the products?
                   name: 'adding-value',
                   fieldset: {
                       legend: {
-                          text: 'How will your project add value to the products?',
+                          text: 'How will your project add value to the produce?',
                           isPageHeading: true,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -42,7 +42,7 @@ How will you add value to the products?
                   items: [
                 {
                   value: "Processing or preparing primary product",
-                  text: "Slaughtering, processing or preparing primary product",
+                  text: "Creating a new product",
                   hint: {
                   text: "For example, cut and packed meat, yogurt to cheese, brewing or distilling"
                   },
@@ -51,7 +51,7 @@ How will you add value to the products?
 
                 {
                   value: "Grading or sorting primary product",
-                  text: "Grading or sorting primary product",
+                  text: "Grading or sorting produce",
                   hint: {
                   text: "For example, washing and grading vegetables, egg grading, optical grading of top fruit"
                   },
@@ -59,16 +59,11 @@ How will you add value to the products?
                 },
                 {
                   value: "Packing primary product",
-                  text: "Packing primary product",
+                  text: "Packing produce",
                   hint: {
                   text: "For example, packing top fruit, bagging vegetables, bottling wine"
                   },
                   checked: checked("adding-value", "Packing primary product")
-                },
-                {
-                  value: "Dynamic controlled-atmosphere storage",
-                  text: "Controlled atmosphere or dynamic controlled atmosphere storage",
-                  checked: checked("adding-value", "Dynamic controlled-atmosphere storage")
                 },
                 {
                   value: "New retail facility to sell direct to consumers",
