--- a/app/views/addingvalue/current/environmental-impact.html
+++ b/app/views/addingvalue/current/environmental-impact.html
@@ -70,12 +70,12 @@ How will the project improve the environment?
                   checked: checked("environmental-impact", "Waste efficiency")
                 },
                 {
-                  value: "Reduce single-use plastics",
-                  text: "Remove single-use plastics",
+                  value: "Sustainable packaging measures",
+                  text: "Sustainable packaging measures",
                   hint :{
                     text: 'For example, removing unnecessary packaging, replacing plastic packaging'
                   },
-                  checked: checked("environmental-impact", "Reduce single-use plastics")
+                  checked: checked("environmental-impact", "Sustainable packaging measures")
                 },
                 {
                   value: "Reduce harmful emissions or pollutants",
