--- a/app/views/addingvalue/current/grant.html
+++ b/app/views/addingvalue/current/grant.html
@@ -27,8 +27,8 @@ Potential grant funding
 
     {% set grantAmount = data['project-cost'] *0.4 %}
     {% set projectCost = data['project-cost'] %}
-      {% if projectCost >=1250001 %}
-      <p class="govuk-body">You may be able to apply for a grant of up to £500,000, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }}.</p>
+      {% if projectCost >=750001 %}
+      <p class="govuk-body">You may be able to apply for a grant of up to £300,000, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }} (and above).</p>
 
       {% else %}
     <p class="govuk-body">You may be able to apply for a grant of up to £{{ grantAmount | toFixed(2) | commafy }}, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }}.</p>
