--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -14,12 +14,11 @@
 
 <p>You can apply if you:</p>
   <ul class="govuk-list govuk-list--bullet">
-  <li>are a grower or producer of agricultural, horticultural or forestry agri-products (a primary producer)</li>
-  <li>provide processing services to a primary producer</li>
-  <li>are a separate processing business owned by a primary producer</li>
-  <li>will do the grant-funded work in England and your business is registered in England</li>
-  <li>estimate the project costs are over £87,500</li>
-</ul>
+  <li>are a grower or producer of agricultural of horticultural produce</li>
+  <li>are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers</li>
+  <li>will do the grant-funded work in England</li>
+  <li>estimate the project costs are over £62,500</li>
+  </ul>
 
 
 
@@ -27,13 +26,11 @@
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
       <li>processing equipment, machinery and facilities (for example, equipment and machinery for bagging or bottling lines, meat cutting lines or vegetable washing and sorting, plus associated refrigeration, auto-packing or handling/palletising facilities)</li>
-      <li>controlled atmosphere or dynamic controlled atmosphere storage</li>
       <li>constructing or improving buildings (for example, a new building for cheese making)</li>
-      <li>specialist vehicles (for example, forklifts or refrigerated lorries)</li>
-      <li>retail facilities (for example, farm shops)</li>
+      <li>retail facilities (for example, shops and display cabinets)</li>
     </ul>
-<p>Basic storage for grain or vegetables is not eligible as it does not add value to products.</p>
-<p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
+<p>You can also buy storage as part of your project but it can only be up to 50% of the total grant funding.</p>
+<p>The minimum grant you can claim is £25,000 (40% of £62,500). The maximum grant is £300,000.</p>
 <h2 id="when-to-apply">When to apply</h2>
 <table class="govuk-table govuk-body">
   <thead class="govuk-table__head">
@@ -46,13 +43,13 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Check if you’re eligible</td>
-      <td class="govuk-table__cell govuk-!-padding-right-1">1 January 2022</td>
-      <td class="govuk-table__cell">28 February 2022</td>
+      <td class="govuk-table__cell govuk-!-padding-right-1">10 May 2022</td>
+      <td class="govuk-table__cell">12 July 2022</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Full application</td>
-      <td class="govuk-table__cell">1 January 2022</td>
-      <td class="govuk-table__cell">31 May 2022</td>
+      <td class="govuk-table__cell">10 May 2022</td>
+      <td class="govuk-table__cell">31 January 2024</td>
     </tr>
   </tbody>
 </table>
