--- a/app/views/addingvalue/current/answers.html
+++ b/app/views/addingvalue/current/answers.html
@@ -89,7 +89,7 @@
 
 
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Products processed
+          <th scope="row" class="govuk-table__header">Produce processed
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9"><li>{{data['products-processed'] | capitalize}}</li></ul></th>
           <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
@@ -162,7 +162,7 @@
           <td class="govuk-table__cell"><a href="collaboration">Change</td>
         </tr>
 
-        
+
 
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Environmental impact
