--- a/app/views/addingvalue/current/start.html
+++ b/app/views/addingvalue/current/start.html
@@ -40,12 +40,11 @@
           <h2 class="govuk-heading-m">Who can apply</h2>
           <p>You can apply if you:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>are a grower or producer of agricultural, horticultural or forestry agri-products (a primary producer)</li>
-            <li>provide processing services to a primary producer</li>
-            <li>are a separate processing business owned by a primary producer</li>
-            <li>will do the grant-funded work in England and your business is registered in England</li>
-            <li>estimate the project costs are over £87,500</li>
-          </ul>
+            <li>are a grower or producer of agricultural or horticultural produce</li>
+            <li>are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers</li>
+            <li>will do the grant-funded work in England</li>
+            <li>estimate the project costs are over £62,500</li>
+            </ul>
         </div>
 
       <div class="govuk-inset-text">
