--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,11 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="slurrystorage">Slurry storage grant</a>
+        </td>
+      <td class="govuk-table__cell">Checker (v1 - last updated on 28 March 2022)</td>
+    </tr>
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="addingvalue">Adding value grant</a>
         </td>
       <td class="govuk-table__cell">Checker (v4 - last updated on 28 March 2022)</td>
