--- a/app/views/addingvalue/current/storage.html
+++ b/app/views/addingvalue/current/storage.html
@@ -36,7 +36,7 @@ Have you already started work on the project?
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="storage" name="storage" type="radio" value="yes"  {{ checked("storage", "yes") }}>
                     <label class="govuk-label govuk-radios__label" for="storage">
-                      Yes, we will buy storage facilities
+                      Yes, we will need storage facilities
                     </label>
 
                   </div>
