--- a/app/views/addingvalue/current/adding-value.html
+++ b/app/views/addingvalue/current/adding-value.html
@@ -25,7 +25,7 @@ How will you add value to the products?
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-              {{ govukCheckboxes({
+              {{ govukRadios({
                   idPrefix: 'adding-value',
                   name: 'adding-value',
                   fieldset: {
@@ -36,7 +36,7 @@ How will you add value to the products?
                       }
                   },
                   hint: {
-                  text: "Select all that apply"
+                  text: "Select the main option that applies"
                   },
 
                   items: [
