AV/STorage updates

--- a/app/views/slurrystorage/current/guidance.html
+++ b/app/views/slurrystorage/current/guidance.html
@@ -54,7 +54,7 @@
   </tbody>
 </table>
 
-<p>You must have applied for planning permission before you submit a full application. Any planning permission must be in place by 31 December 2022.</p>
+<p>You must have secured planning permission before you submit a full application.</p>
 <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
 <p>Before you start the project, you can:</p>
 
