--- a/app/views/slurrystorage/current/consent.html
+++ b/app/views/slurrystorage/current/consent.html
@@ -24,29 +24,12 @@
     <div class="govuk-form-group govuk-!-margin-bottom-9">
       <fieldset class="govuk-fieldset" aria-describedby="consent-to-terms-hint">
         <h1 class="govuk-heading-l">Confirm and send</h1>
-        <p>I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
-        <p>I understand the score was based on the answers I provided.</p>
-        <p>I am aware the information I submit will be checked.</p>
-        <p>I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p>
+        <p class="govuk-body">Holding page and text to be confirmed by business. </p>
 
-        <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future.
-        Please confirm if you are happy for us, or a third-party working for us, to contact you.</p>
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
-            <label class="govuk-label govuk-checkboxes__label" for="confirm">
-            (Optional) I confirm
-            </label>
-          </div>
       </fieldset>
     </div>
 
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        You can only submit your details once
-      </strong>
-    </div>
+
 
     <form class="form" action="{{ nextUrl }}" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
