--- a/app/views/addingvalue/current/views/layouts/GUIDANCEADDINGVALUE.html
+++ b/app/views/addingvalue/current/views/layouts/GUIDANCEADDINGVALUE.html
@@ -68,7 +68,7 @@ Farming Transformation Fund Adding Value Grant
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">Get a grant to add value to agricultural and horticultural primary products through preparing and processing.</p>
+    <p class="gem-c-lead-paragraph">Get a grant to add value to agricultural and horticultural products through preparing and processing.</p>
 
   </div>
 </div>
