--- a/app/views/addingvalue/current/business-type.html
+++ b/app/views/addingvalue/current/business-type.html
@@ -46,7 +46,7 @@ What is your business?
 
                 {
                   value: "100% business owned",
-                  text: "A separate processing business at least 50% owned by growers or producers of agricultural or horticultural produce",
+                  text: "A business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers",
                   hint: {
                   text: "For example, cheese processing business owned by a dairy farmer"
                   },
@@ -77,7 +77,7 @@ What is your business?
           <p class="govuk-body">This grant is for businesses who: </p>
           <ul class="govuk-list govuk-list--bullet">
           <li>are agricultural or horticultural growers or producers</li>
-          <li>are a separate processing business at least 50% owned by growers or producers of agricultural or horticultural produce</li>
+          <li>are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers</li>
           </ul>
 
 
