--- a/app/views/addingvalue/current/answers.html
+++ b/app/views/addingvalue/current/answers.html
@@ -102,9 +102,9 @@
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Adding value
             <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            {% for item in data['adding-value'] %}
-            <li>{{ item | capitalize }}</li>
-            {% endfor %}
+              <li>{{data['adding-value'] | capitalize}}</li>
+
+            
             </ul>
           </th>
           <td class="govuk-table__cell">Average</td>
