--- a/app/views/addingvalue/current/business-type-fail.html
+++ b/app/views/addingvalue/current/business-type-fail.html
@@ -29,7 +29,7 @@
       <p class="govuk-body">This grant is for businesses who: </p>
       <ul class="govuk-list govuk-list--bullet">
         <li>are agricultural or horticultural growers or producers</li>
-        <li>are a separate processing business at least 50% owned by growers or producers of agricultural or horticultural produce</li>
+        <li>a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers</li>
       </ul>
 
       <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
