--- a/app/views/addingvalue/current/future-customers.html
+++ b/app/views/addingvalue/current/future-customers.html
@@ -38,9 +38,9 @@ Who will your customers be after the project?
 
                   items: [
                 {
-                  value: "Producers or growers2",
+                  value: "Producers or growers",
                   text: "Producers or growers",
-                  checked: checked("current-customers", "Producers or growers2")
+                  checked: checked("future-customers", "Producers or growers")
                 },
                 {
                   value: "Processors",
